build/log/idf_py_stdout_output_1240
[1/13] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\station\build\bootloader\esp-idf\esptool_py && D:\esp\esp_idf\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/station/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/11] Building C object esp-idf/ws2812b/CMakeFiles/__idf_ws2812b.dir/ws2812b.c.obj
FAILED: esp-idf/ws2812b/CMakeFiles/__idf_ws2812b.dir/ws2812b.c.obj 
ccache D:\esp\esp_idf\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -ID:/esp/station/build/config -ID:/esp/station/common/ws2812b -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/private_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/driver/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_pm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/esp/station=. -fmacro-prefix-map=D:/esp/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/ws2812b/CMakeFiles/__idf_ws2812b.dir/ws2812b.c.obj -MF esp-idf\ws2812b\CMakeFiles\__idf_ws2812b.dir\ws2812b.c.obj.d -o esp-idf/ws2812b/CMakeFiles/__idf_ws2812b.dir/ws2812b.c.obj -c D:/esp/station/common/ws2812b/ws2812b.c
D:/esp/station/common/ws2812b/ws2812b.c:31:6: error: conflicting types for 'ws2812b_init'; have 'void(int,  int)'
   31 | void ws2812b_init(int tx_pin, int number_led)
      |      ^~~~~~~~~~~~
In file included from D:/esp/station/common/ws2812b/ws2812b.c:13:
D:/esp/station/common/ws2812b/ws2812b.h:4:6: note: previous declaration of 'ws2812b_init' with type 'void(void)'
    4 | void ws2812b_init(void);
      |      ^~~~~~~~~~~~
D:/esp/station/common/ws2812b/ws2812b.c: In function 'ws2812b_init':
D:/esp/station/common/ws2812b/ws2812b.c:33:21: error: statement with no effect [-Werror=unused-value]
   33 |     led_strip_pixels[number_led * 3];
      |     ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
In file included from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/esp_intr_alloc.h:11,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/esp_cpu.h:20,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/spinlock.h:11,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:74,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:58,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:70,
                 from D:/esp/station/common/ws2812b/ws2812b.c:7:
D:/esp/station/common/ws2812b/ws2812b.c: In function 'ws2812b_update_color':
D:/esp/station/common/ws2812b/ws2812b.c:73:81: error: invalid application of 'sizeof' to incomplete type 'uint8_t[]' {aka 'unsigned char[]'}
   73 |     ESP_ERROR_CHECK(rmt_transmit(led_chan, led_encoder, led_strip_pixels, sizeof(led_strip_pixels), &tx_config));
      |                                                                                 ^
D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
D:/esp/station/common/ws2812b/ws2812b.c:75:39: error: invalid application of 'sizeof' to incomplete type 'uint8_t[]' {aka 'unsigned char[]'}
   75 |     memset(led_strip_pixels, 0, sizeof(led_strip_pixels));
      |                                       ^
In file included from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/esp_intr_alloc.h:11,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/esp_cpu.h:20,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/spinlock.h:11,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:74,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:58,
                 from D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:70,
                 from D:/esp/station/common/ws2812b/ws2812b.c:7:
D:/esp/station/common/ws2812b/ws2812b.c:76:81: error: invalid application of 'sizeof' to incomplete type 'uint8_t[]' {aka 'unsigned char[]'}
   76 |     ESP_ERROR_CHECK(rmt_transmit(led_chan, led_encoder, led_strip_pixels, sizeof(led_strip_pixels), &tx_config));
      |                                                                                 ^
D:/esp/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
D:/esp/station/common/ws2812b/ws2812b.c: At top level:
D:/esp/station/common/ws2812b/ws2812b.c:23:16: warning: array 'led_strip_pixels' assumed to have one element
   23 | static uint8_t led_strip_pixels[];
      |                ^~~~~~~~~~~~~~~~
cc1.exe: some warnings being treated as errors
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_main.c.obj
D:/esp/station/main/app_main.c: In function 'wifi_data_callback':
D:/esp/station/main/app_main.c:224:17: warning: unused variable 'bits' [-Wunused-variable]
  224 |     EventBits_t bits = xEventGroupWaitBits(s_wifi_event_group,
      |                 ^~~~
ninja: build stopped: subcommand failed.
